total expense added

--- a/app/views/start/page.html.erb
+++ b/app/views/start/page.html.erb
@@ -1,8 +1,8 @@
-<div>
+<div class="container-fluid">
     <h1>Welcome to the Expense app</h1>
 </div>
 
-<div>
+<div class="containers">
     <h3>
         Maintain your expenses here and check how much you have spent so far
     </h3>
