--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,28 +2,39 @@
 
 <h1>Expenses</h1>
 
-<table style="width: 100%;">
+<table class="container" style="width: 100%;">
   <thead>
-    <tr>
-      <th>Description</th>
+    <tr >
+      <th class="col-sm">Description</th>
       <th>Amount</th>
-      <th colspan="3"></th>
+      <th class="col-sm" colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+    <% @total=0 %>
     <% @articles.each do |article| %>
+    
       <tr>
-        <td><%= article.description %></td>
-        <td><%= article.amount %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="col-sm"><%= article.description %></td>
+        <td class="col-sm"><%= article.amount %></td>
+        <% @total+=article.amount %>
+        <td class="col-sm"><%= link_to 'Show', article %></td>
+        <td class="col-sm"><%= link_to 'Edit', edit_article_path(article) %></td>
+        <td class="col-sm"><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+
+    
   </tbody>
+
 </table>
 
 <br>
 
+
+<div class="container-fluid">
+  Total money spent till now <%= @total %>
+</div>
+<br>
 <%= link_to 'New Article', new_article_path %>
