--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,1 @@
-<h3>This is the about page. Making this mini-project to get fimiliar with the basics.</h3>
+<h3 style="background-color: lightblue;">This is the about page. Making this mini-project to get fimiliar with the basics.</h3>
