--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Expenses</h1>
 
-<table class="container" style="width: 100%;">
+<table class="container" style="width: 100%; border: 1px solid">
   <thead>
     <tr >
       <th class="col-sm">Description</th>
