--- a/app/views/start/page.html.erb
+++ b/app/views/start/page.html.erb
@@ -1,11 +1,17 @@
-<div class="container-fluid">
-    <h1>Welcome to the Expense app</h1>
+<div style="background-color:lightblue">
+    
+        <h1 class="container-fluid">Welcome to the Expense app</h1>
+
 </div>
 
-<div class="containers">
-    <h3>
-        Maintain your expenses here and check how much you have spent so far
-    </h3>
-</div>
 
+
+<div style="background-color:rgb(84, 127, 141)">
+
+    <div class="containers" >
+        <h3>
+            Maintain your expenses here and check how much you have spent so far
+        </h3>
+    </div>
+</div>
 
