--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,6 @@
-<h3 style="background-color: lightblue;">This is the about page. Making this mini-project to get fimiliar with the basics.</h3>
+<h3 style="background-color: lightblue;"> Making this mini-project to get fimiliar with the basics.</h3>
+
+<p>The final aim of this project is to create a split money webpage.</p>
+<p>Imagine you go to shopping with some friends and visit multiple stores and each one of you brought different things.</p>
+<p>Some of those expenditures would have equal distribution and some don't.</p>
+<p>The main goal is to maintain the data in this app, and efficiently provide the final amount that a person owes to the other one.</p>
